# Padfoot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
padfoot_src/: manage.py
padfoot_src/padfoot_api/: apps.py  misc.py  models.py  serializers.py  urls.py  views.py
padfoot_src/padfoot_api/utils/: constants.py
padfoot_src/padfoot_src/: asgi.py  settings.py  urls.py  wsgi.py
