[tool.poetry]
name = "padfoot"
version = "0.0.1"
description = ""
authors = ["Costa"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
requests = "^2.28.1"
psycopg2-binary = "^2.9.3"
beautifulsoup4 = "^4.11.1"
python-dateutil = "^2.8.2"
ao3-api = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
